# mutating-webhook-no-cpu-limit

./: .gitignore  README.md  create_release.sh  pylama.ini  pyproject.toml  skaffold.yaml
.github/workflows/: release.yaml  testing.yml
app/: main.py  run.py
app/endpoints/: healthz.py  mutate.py
app/schemas/: __init__.py
app/tests/: test_data_a.json  test_data_b.json  test_data_c.json  test_endpoints.py
charts/mutating-webhook-no-cpu-limit/: Chart.yaml  values.yaml
charts/mutating-webhook-no-cpu-limit/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml  webhook_configs.yaml
compose/: Dockerfile  entrypoint.sh  start
